<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ChallengeUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Approve</string>
    <string name="rejected">Rejected.</string>
    <string name="follow">Follow</string>
    <string name="description">Description</string>
    <string name="task">Task</string>
    <string name="challenge_me">Challenge Me!</string>
    <string name="report">Report</string>
    <string name="preview">Preview</string>
    <string name="name_of_your_challenge">Name of Your Challenge</string>
    <string name="load_image">Load Image</string>
    <string name="create">Create</string>
    <string name="challenge">Challenge</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="news_feed">News Feed</string>
    <string name="search">Search</string>
    <string name="time_challenges">Time Challenges</string>
    <string name="shop">Shop</string>
    <string name="saved_challenges">Saved Challenges</string>
    <string name="top_challenges">Top Challenges</string>
    <string name="top_players">Top Players</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="log_out_text">Log out</string>
    <string name="log_in_text">Log in</string>
    <string name="create_dialog_title">What do you want to create?</string>
    <string name="report_dialog_title">Report Challenge</string>
    <string name="upload_video_confirmation">Upload video confirmation</string>
    <string name="buffering_string"><![CDATA[Buffering &#8230;]]></string>
    <string name="challenges">Challenges</string>
    <string name="liked_challenges">Liked Challenges</string>
    <string name="reported_challenges">Reported Challenges</string>
    <string name="top">Top</string>
    <string name="challenge_up">Challenge Up!</string>
    <string name="load_photo">Load Photo</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="additional_info">Additional Info</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="downloadingError">Error while downloading</string>
    <string name="confirmed">Confirmed!</string>
    <string name="denied">Denied.</string>
    <string name="totallyRejected">Challenge approval totally rejected.</string>
    <string name="challenge_is_completed">Challenge is completed!</string>
    <string name="order_by">Order By</string>
    <string name="arrow"><![CDATA[>=]]></string>
    <string name="rp">RP</string>
    <string name="completed">Completed</string>
    <string name="accepted">Accepted</string>
    <string name="liked">Liked</string>
    <string name="hint_search_by">Search by name, desc, hashtag, author</string>
    <string name="pick_topics">Pick topics you are most interested in</string>
    <string name="challenge_created">Challenge Created</string>
    <string name="ban_challenge">Ban Challenge</string>
    <string name="unban_challenge">Unban Challenge</string>

    <string-array name="createDialog">
        <item>Challenge</item>
        <item>Post</item>
    </string-array>
    <string-array name="reportDialog">
        <item>Report</item>
        <item>Cancel</item>
    </string-array>
</resources>
