<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shop"
        android:title="@string/shop" />
    <item
        android:id="@+id/achievements"
        android:title="@string/achievements" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

    <item android:title="@string/top">
        <menu>
            <item
                android:id="@+id/topChallenges"
                android:title="@string/top_challenges" />
            <item
                android:id="@+id/topPlayers"
                android:title="@string/top_players" />
        </menu>
    </item>

    <item android:title="@string/challenges">
        <menu>
            <item
                android:id="@+id/savedChallenges"
                android:title="@string/saved_challenges" />
            <item
                android:id="@+id/likedChallenges"
                android:title="@string/liked_challenges" />
            <item
                android:id="@+id/reportedChallenges"
                android:title="@string/reported_challenges"
                android:visible="false"/>
        </menu>
    </item>
</menu>