<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/addMenuItem"
        android:icon="@drawable/ic_add_white"
        android:title="@string/create"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchMenuItem"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/reportMenuItem"
        android:icon="@drawable/ic_dislike"
        android:title="@string/report"
        android:visible="false"
        app:showAsAction="always" />
</menu>