<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:hint="@string/hint_search_by"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/iconSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iconSearch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/editTextQuery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextQuery"
            app:srcCompat="@drawable/ic_search" />

        <HorizontalScrollView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/textLiked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextQuery">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <EditText
            android:id="@+id/editTextLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="6"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textLiked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/arrow1"
            app:layout_constraintTop_toTopOf="@+id/textLiked" />

        <EditText
            android:id="@+id/editTextAccepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textAccepted"
            app:layout_constraintStart_toStartOf="@+id/editTextLiked"
            app:layout_constraintTop_toTopOf="@+id/textAccepted" />

        <EditText
            android:id="@+id/editTextCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textCompleted"
            app:layout_constraintStart_toStartOf="@+id/editTextAccepted"
            app:layout_constraintTop_toTopOf="@+id/arrow3" />

        <EditText
            android:id="@+id/editTextRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textRP"
            app:layout_constraintStart_toStartOf="@+id/editTextCompleted"
            app:layout_constraintTop_toTopOf="@+id/arrow4" />

        <TextView
            android:id="@+id/textLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/liked"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/arrow1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories" />

        <TextView
            android:id="@+id/textAccepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accepted"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textLiked"
            app:layout_constraintStart_toStartOf="@+id/textLiked"
            app:layout_constraintTop_toBottomOf="@+id/textLiked" />

        <TextView
            android:id="@+id/textCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/completed"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textAccepted"
            app:layout_constraintStart_toStartOf="@+id/textAccepted"
            app:layout_constraintTop_toBottomOf="@+id/textAccepted" />

        <TextView
            android:id="@+id/textRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/arrow3"
            app:layout_constraintStart_toStartOf="@+id/textCompleted"
            app:layout_constraintTop_toBottomOf="@+id/textCompleted" />

        <TextView
            android:id="@+id/textOrderBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/order_by"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/spinnerOrderBy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRP" />

        <Spinner
            android:id="@+id/spinnerDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerOrderBy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spinnerOrderBy"
            app:layout_constraintTop_toTopOf="@+id/spinnerOrderBy" />

        <Spinner
            android:id="@+id/spinnerOrderBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/textOrderBy"
            app:layout_constraintEnd_toStartOf="@+id/spinnerDirection"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textOrderBy"
            app:layout_constraintTop_toTopOf="@+id/textOrderBy" />

        <TextView
            android:id="@+id/arrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textLiked"
            app:layout_constraintEnd_toStartOf="@+id/editTextLiked"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textLiked"
            app:layout_constraintTop_toTopOf="@+id/textLiked" />

        <TextView
            android:id="@+id/arrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textAccepted"
            app:layout_constraintStart_toStartOf="@+id/arrow1"
            app:layout_constraintTop_toTopOf="@+id/textAccepted" />

        <TextView
            android:id="@+id/arrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textCompleted"
            app:layout_constraintStart_toStartOf="@+id/arrow2"
            app:layout_constraintTop_toTopOf="@+id/textCompleted" />

        <TextView
            android:id="@+id/arrow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/textRP"
            app:layout_constraintStart_toStartOf="@+id/arrow3"
            app:layout_constraintTop_toTopOf="@+id/textRP" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>